--- a/package.json
+++ b/package.json
@@ -2,45 +2,24 @@
   "name": "fcl-sveltekit",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview"
+    "dev": "vite dev",
+    "build": "vite build",
+    "package": "vite package",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@iconify/svelte": "^2.2.1",
-    "@jsdevtools/rehype-toc": "^3.0.2",
-    "@onflow/fcl": "1.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@sveltejs/adapter-auto": "^1.0.0-next.43",
-    "@sveltejs/kit": "1.0.0-next.355",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
-    "autoprefixer": "^10.4.4",
-    "mdast-util-to-string": "^3.1.0",
-    "mdsvex": "^0.10.5",
-    "papaparse": "^5.3.2",
-    "postcss": "^8.4.12",
-    "postcss-load-config": "^3.1.4",
-    "prismjs": "^1.28.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.0.1",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "sass": "^1.51.0",
+    "@onflow/fcl": "^1.0.2",
+    "@picocss/pico": "^1.5.0",
+    "@sveltejs/adapter-auto": "^1.0.0-next.53",
+    "@sveltejs/kit": "^1.0.0-next.377",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.48",
+    "buffer": "^6.0.3",
+    "canvas-confetti": "^1.5.1",
+    "scrypt-async": "^2.0.1",
     "svelte": "^3.48.0",
-    "svelte-preprocess": "^4.10.6",
-    "sveltekit-i18n": "^2.2.1",
-    "unist-util-visit": "^4.1.0"
+    "svelte-intersection-observer": "^0.10.0",
+    "vite": "^3.0.0"
   },
   "type": "module",
-  "dependencies": {
-    "@felte/validator-yup": "^1.0.8",
-    "buffer": "^6.0.3",
-    "carbites": "^1.0.6",
-    "felte": "^1.2.2",
-    "ipfs-car": "^0.7.0",
-    "nft.storage": "^6.2.0",
-    "papaparse": "^5.3.2",
-    "yup": "^0.32.11"
-  }
+  "dependencies": {}
 }
